<resources>
    <string name="app_name">LocateMyPet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title">HELP A LOST PET</string>
    <string name="title_desc">Scan QR Code from a lost pet.</string>
    <string name="scanQr">SCAN QR CODE</string>
    <string name="home">Home</string>
    <string name="my_pets">My Pets</string>
    <string name="scanner">Scanner</string>
    <string name="exit">Exit</string>
    <string name="scan_pets">Scan Pets</string>
    <string name="help_a_lost_pet_now">Help a lost pet now!</string>
    <string name="locatemypet">LocateMyPet</string>
    <string name="set_ip_address">Set IP Address</string>
    <string name="i_have_the_following_characteristics">I have the following characteristics :</string>
    <string name="loading">loading</string>
    <string name="please_contact_this_person_whenever_i_am_lost">Please contact this person whenever I am lost :</string>
    <string name="or_notify_my_owner_clicking_this_button">or notify my owner clicking this button</string>
    <string name="notify_my_owner">Notify my owner!</string>
    <string name="my_characteristics">My Characteristics :</string>
    <string name="my_owner">My Owner :</string>
    <string name="or">OR</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="either_you_lost_connection">Either you lost connection</string>
    <string name="qr_code_is_not_found_on_our_database">QR Code is not found on our database</string>
    <string name="reports">Reports</string>
    <string name="scanBarcode">Scan Barcode</string>
    <string name="result">Result</string>
    <string name="myPets">My Pets</string>
    <string name="edit_pet_info">Edit Pet Info</string>
    <string name="view_pet_info">View Pet Info</string>
    <string name="remove_this_pet">Remove this pet</string>
    <string name="characteristics">Characteristics:</string>
    <string name="edit_pet_information">Edit Pet Information</string>
    <string name="pet_name">Pet Name :</string>
    <string name="type_of_pet">Type of Pet :</string>
    <string name="pet_name_here">Pet Name Here</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="owner_name">Owner Name :</string>
    <string name="e_g_hugh_jackman">e.g. Hugh Jackman</string>
    <string name="owner_contact_no">Contact No. :</string>
    <string name="e_g_2939710">e.g. 2939710</string>
    <string name="save_changes">Save Changes</string>
    <string name="brown_black_eyes_white_patches">Brown. Black Eyes. White Patches</string>
    <string name="plus_sign">+</string>
    <string name="pet_registration">Pet Registration</string>
    <string name="owner_contact">Owner Contact :</string>
    <string name="register_this_pet">Register this Pet</string>
    <string name="save_qr_code">Save QR Code</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Map</string>

    <string name="FCM_PREF">com.example.jcv.locatemypet.fcm_pref</string>
    <string name="FCM_TOKEN">com.example.jcv.locatemypet.fcm_token</string>
    <string name="add_marker">Add a Marker to Map</string>

</resources>
