<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jcv.locatemypet.pet_edit"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_pet_information"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="29dp"
            android:text="@string/pet_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="34dp"
            android:text="@string/type_of_pet" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/radioGroup2"
            android:layout_marginTop="24dp"
            android:text="@string/characteristics" />

        <EditText
            android:id="@+id/add_pet_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/add_pet_name"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignRight="@+id/add_pet_name"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="16dp"
            android:ems="13"
            android:hint="@string/brown_black_eyes_white_patches"
            android:inputType="textMultiLine|textCapWords" />

        <EditText
            android:id="@+id/add_pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:ems="10"
            android:hint="@string/pet_name_here"
            android:inputType="textPersonName|textCapWords" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dog_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="doCheckPetType"
                android:text="@string/dog" />

            <RadioButton
                android:id="@+id/cat_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat"
                android:onClick="doCheckPetType"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/add_pet_char"
            android:layout_marginTop="26dp"
            android:text="@string/owner_name" />

        <EditText
            android:id="@+id/add_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:ems="10"
            android:hint="@string/e_g_hugh_jackman"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/owner_contact_no"
            android:layout_below="@+id/add_owner_name"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <EditText
            android:id="@+id/add_owner_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/add_pet_name"
            android:layout_alignStart="@+id/add_pet_name"
            android:ems="10"
            android:hint="@string/e_g_2939710"
            android:inputType="phone" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_below="@+id/add_owner_contact"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:onClick="doEdit"/>

    </RelativeLayout>

</LinearLayout>
