<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.jcv.locatemypet.BarcodeResultActivity"
        android:orientation="vertical"
        android:id="@+id/barcodeResultLayout">

        <TextView
            android:id="@+id/petCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="10sp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cat"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:id="@+id/petType"/>

        <TextView
            android:id="@+id/petName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textSize="17sp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_characteristics"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/petCharacteristics"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="35dp"
            android:paddingStart="35dp"
            android:text="@string/loading"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_owner"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:padding="10dp"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="20dp"/>

        <Button
            android:id="@+id/notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_marker"
            android:background="@drawable/custom_button_rect"
            android:textColor="@color/flat_white"
            android:padding="10dp"
            android:onClick="sendCoordinate"/>

    </LinearLayout>
</ScrollView>
