<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jcv.locatemypet.pet_preview"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/prev_petType"
            android:padding="15dp"
            android:src="@drawable/cat"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prev_petName"
                android:text="@string/loading"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prev_petCode"
                android:text="@string/loading"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characteristics"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/loading"
        android:id="@+id/prev_petChar"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_owner"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/prev_petOwner"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"/>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_qr_code"
        android:onClick="saveBmp"
        android:textColor="@color/flat_white"
        android:background="@drawable/custom_button_rect"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
